[gd_scene load_steps=2 format=3 uid="uid://wqrhgci0la0i"]

[ext_resource type="Script" path="res://Scripts/timer.gd" id="1_e4wum"]

[node name="Timer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4wum")

[node name="text_holder" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="timer_status" type="Label" parent="text_holder"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "00:00"

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
